# cavestory-save-lib

./: .gitignore  Cargo.toml  LICENSE  README.md  README_zh.md  flags.txt  profile.txt  todo.md
.github/workflows/: ci.yml
examples/: basic.rs
src/: constant.rs  constants.rs  game_profile.rs  items.rs  lib.rs  main.rs
src/items/: equipment.rs  inventory.rs  map.rs  mod.rs  music.rs  teleporter.rs  weapon.rs
src/profile/: mod.rs  offset.rs  vistor.rs
