[package]
name = "cavestory-save-lib"
version = "2.3.1"
edition = "2021"
description = "editor for profile.dat of cavestory"
authors = ["poly000"]
license-file = "LICENSE"
repository = "https://github.com/poly000/cavestory-save-lib"

[dependencies]
strum = { version = "0.24.1", features = ["derive"] }

[profile.release]
strip = true
codegen-units = 1
panic = "abort"
lto = true

[lib]
name = "cavestory_save"
