[package]
name = "cavestory-save-lib"
version = "2.9.2"
edition = "2021"
description = "editor for profile.dat of cavestory"
authors = ["poly000"]
license-file = "LICENSE"
repository = "https://github.com/poly000/cavestory-save-lib"
categories = ["parser-implementations"]
rust-version = "1.75"

[dependencies]
strum = { version = "0.26.0", features = ["derive", "std"] }
thiserror = "1.0.37"

[profile.release]
strip = true
codegen-units = 1
panic = "abort"
lto = true

[lib]
name = "cavestory_save"

[features]
default = ["strum"]
strum = []
